--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,21 @@
 #\u7AEF\u53E3
 server.port=8089
+spring.application.name=my-feign-item
+#\u670D\u52A1\u8DEF\u7531\u540D\u79F0 (url\u8BF7\u6C42\u65F6\u7684\u6700\u5F00\u59CB\u7684\u524D\u7F00)
+url.server.name=feign-item
 #\u6570\u636E\u5E93
-#spring.datasource.dynamic.primary=master
-spring.datasource.dynamic.datasource.master.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.dynamic.primary=master
+#spring.datasource.dynamic.datasource.master.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.dynamic.datasource.master.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.dynamic.datasource.master.url=jdbc:mysql://localhost:3306/local_my_redis?characterEncoding=utf8&useSSL=false&allowMultiQueries=true
 spring.datasource.dynamic.datasource.master.username=root
 spring.datasource.dynamic.datasource.master.password=12345678
 spring.datasource.dynamic.datasource.master.druid.init-connection-sqls=set names utf8mb4
-#spring.datasource.dynamic.datasource.slave.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.dynamic.datasource.slave.url=jdbc:mysql://localhost:3306/local_uxin_redis?characterEncoding=utf8&useSSL=false&allowMultiQueries=true
-#spring.datasource.dynamic.datasource.slave.username=root
-#spring.datasource.dynamic.datasource.slave.password=12345678
-#spring.datasource.dynamic.datasource.slave.druid.init-connection-sqls=set names utf8mb4
+spring.datasource.dynamic.datasource.slave.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.dynamic.datasource.slave.url=jdbc:mysql://localhost:3306/local_uxin_redis?characterEncoding=utf8&useSSL=false&allowMultiQueries=true
+spring.datasource.dynamic.datasource.slave.username=root
+spring.datasource.dynamic.datasource.slave.password=12345678
+spring.datasource.dynamic.datasource.slave.druid.init-connection-sqls=set names utf8mb4
 spring.datasource.druid.stat-view-servlet.enabled=false
 #mybatis-plus
 mybatis-plus.global-config.db-config.logic-delete-value=0 # \u903B\u8F91\u5DF2\u5220\u9664\u503C(\u9ED8\u8BA4\u4E3A0)
@@ -54,3 +58,7 @@ swagger.enabled=true
 #spring.data.mongodb.uri=${MONGO_ZG_DNS}
 #\u5916\u90E8\u94FE\u63A5
 external.fiance.url=http://localhost:8080
+
+city.all.domain=http://mps.xin.com
+city.all.appId=10012
+city.all.path=/mps-city-service/city-base/get-cityall-list-all
