--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,32 +24,32 @@ mybatis-plus.mapper-locations=classpath:/mapper/*Mapper.xml
 mybatis-plus.typeAliasesPackage=com.feign.demo.web.entity
 #log
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
-##redis
-spring.redis.enabled=true
-#\u6570\u636E\u5E93\u7D22\u5F15\uFF08\u9ED8\u8BA4\u4E3A0\uFF09
-spring.redis.database=1
-#redis\u670D\u52A1\u5668\u5730\u5740
-spring.redis.host=127.0.0.1
-#redis\u670D\u52A1\u5668\u8FDE\u63A5\u7AEF\u53E3
-spring.redis.port=6379
-#Redis\u670D\u52A1\u5668\u5BC6\u7801\uFF08\u9ED8\u8BA4\u4E3A\u7A7A\uFF09
-#spring.redis.password=
-spring.data.redis.repositories.enabled=true
-#redis\u8FDE\u63A5\u6C60\u8BBE\u7F6E
-## \u8FDE\u63A5\u8D85\u65F6\u65F6\u95F4\uFF08\u6BEB\u79D2\uFF09
-spring.redis.timeout=10000
-#\u8FDE\u63A5\u6C60\u6700\u5927\u8FDE\u63A5\u6570\uFF08\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236\uFF09
-spring.redis.lettuce.pool.max-active=50
-#\u8FDE\u63A5\u6C60\u6700\u5927\u963B\u585E\u7B49\u5F85\u65F6\u95F4\uFF08\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236\uFF09
-spring.redis.lettuce.pool.max-wait=10000
-#\u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5927\u7A7A\u95F2\u8FDE\u63A5
-spring.redis.lettuce.pool.max-idle=50
-#\u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5C0F\u7A7A\u95F2\u8FDE\u63A5
-spring.redis.lettuce.pool.min-idle=10
-## \u5173\u95ED\u8D85\u65F6\u65F6\u95F4\uFF08\u6BEB\u79D2\uFF09
-spring.redis.lettuce.shutdown-timeout=100
-#\u7A7A\u95F2\u94FE\u63A5\u68C0\u6D4B\u7EBF\u7A0B\u68C0\u6D4B\u5468\u671F
-spring.redis.lettuce.pool.time-between-eviction-runs=30000
+###redis
+#spring.redis.enabled=true
+##\u6570\u636E\u5E93\u7D22\u5F15\uFF08\u9ED8\u8BA4\u4E3A0\uFF09
+#spring.redis.database=1
+##redis\u670D\u52A1\u5668\u5730\u5740
+#spring.redis.host=127.0.0.1
+##redis\u670D\u52A1\u5668\u8FDE\u63A5\u7AEF\u53E3
+#spring.redis.port=6379
+##Redis\u670D\u52A1\u5668\u5BC6\u7801\uFF08\u9ED8\u8BA4\u4E3A\u7A7A\uFF09
+##spring.redis.password=
+#spring.data.redis.repositories.enabled=true
+##redis\u8FDE\u63A5\u6C60\u8BBE\u7F6E
+### \u8FDE\u63A5\u8D85\u65F6\u65F6\u95F4\uFF08\u6BEB\u79D2\uFF09
+#spring.redis.timeout=10000
+##\u8FDE\u63A5\u6C60\u6700\u5927\u8FDE\u63A5\u6570\uFF08\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236\uFF09
+#spring.redis.lettuce.pool.max-active=50
+##\u8FDE\u63A5\u6C60\u6700\u5927\u963B\u585E\u7B49\u5F85\u65F6\u95F4\uFF08\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236\uFF09
+#spring.redis.lettuce.pool.max-wait=10000
+##\u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5927\u7A7A\u95F2\u8FDE\u63A5
+#spring.redis.lettuce.pool.max-idle=50
+##\u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5C0F\u7A7A\u95F2\u8FDE\u63A5
+#spring.redis.lettuce.pool.min-idle=10
+### \u5173\u95ED\u8D85\u65F6\u65F6\u95F4\uFF08\u6BEB\u79D2\uFF09
+#spring.redis.lettuce.shutdown-timeout=100
+##\u7A7A\u95F2\u94FE\u63A5\u68C0\u6D4B\u7EBF\u7A0B\u68C0\u6D4B\u5468\u671F
+#spring.redis.lettuce.pool.time-between-eviction-runs=30000
 #swagger
 swagger.title=\u6211feign\u7684swagger
 swagger.base-package=com.feign.demo
